the game stop properly and the player can restart the game by button.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     
     <div class="header">
         <h1>Rock Paper Scissors</h1>
-        <span>This is no long a console game!<em>Now it has a UI.</em></span>
+        <span>
+        This is no long a console game!<em>Now it has a UI. </em>
+        </span>
+        <span>
+            <br>Make your choice and battle with randomness. Whoever scores 5 times first win the whole game.
+        </span>
     </div>
     <div class="humanChoice">
         <p>Player Human, Make your choice:</p>
